SCSS Improved sg-swatch.scss

--- a/assets/scss/styleguide/sg-swatch.scss
+++ b/assets/scss/styleguide/sg-swatch.scss
@@ -1,18 +1,38 @@
-.sg-swatch--rectangle {
-  width: 20%;
-  padding-bottom: 20%;
-
-  float: left;
-
-  background-color: $c-grey6;
-
-  // &:nth-child(2n) {
-  //   background-color: $c-grey5;
-  // }
-  // &:nth-child(3n) {
-  //   background-color: $c-grey7;
-  // }
-  // &:nth-child(7n) {
-  //   background-color: $c-grey8;
-  // }
+[class^="sg-swatch"],
+[class*=" sg-swatch"] {
+  position: relative;
 }
+
+.sg-swatch--outline {
+  width: em($ratio--m);
+  height: em($ratio--m);
+
+  @include margin(null auto em($ratio--b));
+
+  border-width: $line--l;
+  border-style: solid;
+  border-radius: 50%;
+}
+
+.sg-swatch--circle {
+  width: em($ratio--xl);
+  height: em($ratio--xl);
+
+  @include margin(null auto em($ratio--b));
+
+  border-radius: 50%;
+}
+
+.sg-swatch--rectangle {
+  padding-bottom: 60%;
+}
+
+.sg-swatch--text {
+  line-height: em($height--b);
+  // @include padding(em($ratio--s) null);
+  // font-size: em($ratio--m);
+}
+
+// .sg-swatch--full {
+//   height: 25vh;
+// }
