SCSS Minor styleguide styling

--- a/assets/scss/styleguide.scss
+++ b/assets/scss/styleguide.scss
@@ -24,8 +24,11 @@
 
 // Styleguide
 @import "styleguide/kss";
-
 @import "styleguide/specific";
 
-@import "styleguide/sg-swatch";
+@import "styleguide/json";
+
 @import "styleguide/sg-color";
+@import "styleguide/sg-swatch";
+
+@import "styleguide/sg-temp";
