SCSS New c-units with a scale of 1.15

--- a/assets/scss/config/c-units.scss
+++ b/assets/scss/config/c-units.scss
@@ -1,13 +1,24 @@
+$scale-1: $golden;
+$scale-2: 1.15;
+
 // Units
-$unit--xl: 36;
-$unit--l:  20;
-$unit--m:  18;
-$unit--b:  16;
-$unit--s:  14;
-$unit--xs: 12;
+$unit--b:   16;
+
+$unit--xxh: round(modular-scale($unit--b, +9, $scale-2));
+$unit--xh:  round(modular-scale($unit--b, +8, $scale-2));
+$unit--h:   round(modular-scale($unit--b, +6, $scale-2));
+$unit--xxl: round(modular-scale($unit--b, +5, $scale-2));
+$unit--xl:  round(modular-scale($unit--b, +3, $scale-2));
+$unit--l:   round(modular-scale($unit--b, +2, $scale-2));
+$unit--m:   round(modular-scale($unit--b, +1, $scale-2));
+
+$unit--s:   round(modular-scale($unit--b, -1, $scale-2));
+$unit--xs:  round(modular-scale($unit--b, -2, $scale-2));
+$unit--xxs: round(modular-scale($unit--b, -5, $scale-2));
 
 // Spacing
-$spacing--m:   2;
+$spacing--l:   2;
+$spacing--m:   1.75;
 $spacing--b:   1.5;
 $spacing--s:   1.35;
 $spacing--xs:  1.25;
@@ -44,19 +55,21 @@ $width--b:  400;
 $width--s:  220;
 
 // Heights
-$height--m: round(golden-ratio($unit--b * $spacing--m, 1));
-$height--b: round(golden-ratio($unit--b * $spacing--b, 1));
+$height--l: round(modular-scale($unit--b * $spacing--l, 1, $scale-1));
+$height--m: round(modular-scale($unit--b * $spacing--m, 1, $scale-1));
+$height--b: round(modular-scale($unit--b * $spacing--b, 1, $scale-1));
+$height--s: round(modular-scale($unit--b * $spacing--s, 1, $scale-1));
 
 // Ratios
-$ratio--xxh: round(golden-ratio($unit--b,  7));
-$ratio--xh:  round(golden-ratio($unit--b,  6));
-$ratio--h:   round(golden-ratio($unit--b,  5));
-$ratio--xxl: round(golden-ratio($unit--b,  4));
-$ratio--xl:  round(golden-ratio($unit--b,  3));
-$ratio--l:   round(golden-ratio($unit--b,  2));
-$ratio--m:   round(golden-ratio($unit--b,  1));
+$ratio--xxh: round(modular-scale($unit--b, +7, $scale-1));
+$ratio--xh:  round(modular-scale($unit--b, +6, $scale-1));
+$ratio--h:   round(modular-scale($unit--b, +5, $scale-1));
+$ratio--xxl: round(modular-scale($unit--b, +4, $scale-1));
+$ratio--xl:  round(modular-scale($unit--b, +3, $scale-1));
+$ratio--l:   round(modular-scale($unit--b, +2, $scale-1));
+$ratio--m:   round(modular-scale($unit--b, +1, $scale-1));
 $ratio--b:   $unit--b;
-$ratio--s:   round(golden-ratio($unit--b, -1));
-$ratio--xs:  round(golden-ratio($unit--b, -2));
-$ratio--xxs: round(golden-ratio($unit--b, -3));
-$ratio--t:   round(golden-ratio($unit--b, -4));
+$ratio--s:   round(modular-scale($unit--b, -1, $scale-1));
+$ratio--xs:  round(modular-scale($unit--b, -2, $scale-1));
+$ratio--xxs: round(modular-scale($unit--b, -3, $scale-1));
+$ratio--t:   round(modular-scale($unit--b, -4, $scale-1));
