--- a/assets/jade/mixins/_dummy.jade
+++ b/assets/jade/mixins/_dummy.jade
@@ -1,65 +1,72 @@
-//- type: words, text (ends with a period), chars, sentences (default)
-//- default amount: 1
+//- type: words, text (default, ends with a period), chars, sentences
+//- default amount: 10
 
 mixin dummy(amount, type)
-  //- this array will be loremText (by sentences);
-  - var loremArray = new Array();
   //- this string is cherry picked (by sentences) to build a random piece of content;
-  - var loremText = "Now, as the lightning rod to a spire on shore is intended to carry off the perilous fluid into the soil; so the kindred rod which at sea some ships carry to each mast, is intended to conduct it into the water. But as this conductor must descend to considerable depth, that its end may avoid all contact with the hull; and as moreover, if kept constantly towing there, it would be liable to many mishaps, besides interfering not a little with some of the rigging, and more or less impeding the vessel's way in the water; because of all this, the lower parts of a ship's lightning-rods are not always overboard; but are generally made in long slender links, so as to be the more readily hauled up into the chains outside, or thrown down into the sea, as occasion may require. The little steamer was already flapping her way eastward of the big crescent of shipping, and the low Essex coast was growing blue and hazy, when a Martian appeared, small and faint in the remote distance, advancing along the muddy coast from the direction of Foulness. At that the captain on the bridge swore at the top of his voice with fear and anger at his own delay, and the paddles seemed infected with his terror. Every soul aboard stood at the bulwarks or on the seats of the steamer and stared at that distant shape, higher than the trees or church towers inland, and advancing with a leisurely parody of a human stride. There was no exit from the room other than the doorway in which I now stood facing the two frightful reptiles. Cornered, I knew that they would fight like demons, and they were well equipped to fight if fight they must. Together they launched themselves upon me, and though I ran one of them through the heart on the instant, the other fastened its gleaming fangs about my sword arm above the elbow, and then with her sharp talons commenced to rake me about the body, evidently intent upon disemboweling me. I saw that it was useless to hope that I might release my arm from that powerful, viselike grip which seemed to be severing my arm from my body. The pain I suffered was intense, but it only served to spur me to greater efforts to overcome my antagonist. They were now almost upon him; their flying mounts charging down on the relatively puny figure at terrific speed, while the warriors leaned low to the right, with their great metal-shod spears. Each seemed striving to be the first to impale the poor Zodangan and in another moment his fate would have been sealed had it not been for my timely arrival. Driving my fleet air craft at high speed directly behind the warriors I soon overtook them and without diminishing my speed I rammed the prow of my little flier between the shoulders of the nearest. The impact sufficient to have torn through inches of solid steel, hurled the fellow's headless body into the air over the head of his thoat, where it fell sprawling upon the moss. The mounts of the other two warriors turned squealing in terror, and bolted in opposite directions. With the exception of their ornaments all were naked. The women varied in appearance but little from the men, except that their tusks were much larger in proportion to their height, in some instances curving nearly to their high-set ears. Their bodies were smaller and lighter in color, and their fingers and toes bore the rudiments of nails, which were entirely lacking among the males. The adult females ranged in height from ten to twelve feet. Look at the sailor, called the mincer, who now comes along, and assisted by two allies, heavily backs the grandissimus, as the mariners call it, and with bowed shoulders, staggers off with it as if he were a grenadier carrying a dead comrade from the field. Extending it upon the forecastle deck, he now proceeds cylindrically to remove its dark pelt, as an African hunter the pelt of a boa. This done he turns the pelt inside out, like a pantaloon leg; gives it a good stretching, so as almost to double its diameter; and at last hangs it, well spread, in the rigging, to dry. Ere long, it is taken down; when removing some three feet of it, towards the pointed extremity, and then cutting two slits for arm-holes at the other end, he lengthwise slips himself bodily into it. The mincer now stands before you invested in the full canonicals of his calling. Immemorial to all his order, this investiture alone will adequately protect him, while employed in the peculiar functions of his office. But the placing of the cap-sheaf to all this blundering business was reserved for the scientific Frederick Cuvier, brother to the famous Baron. In 1836, he published a Natural History of Whales, in which he gives what he calls a picture of the Sperm Whale. Before showing that picture to any Nantucketer, you had best provide for your summary retreat from Nantucket. In a word, Frederick Cuvier's Sperm Whale is not a Sperm Whale, but a squash. Of course, he never had the benefit of a whaling voyage (such men seldom have), but whence he derived that picture, who can tell? Perhaps he got it as his scientific predecessor in the same field, Desmarest, got one of his authentic abortions; that is, from a Chinese drawing. And what sort of lively lads with the pencil those Chinese are, many queer cups and saucers inform us.";
+  - var textFrom = "Now, as the lightning rod to a spire on shore is intended to carry off the perilous fluid into the soil; so the kindred rod which at sea some ships carry to each mast, is intended to conduct it into the water. But as this conductor must descend to considerable depth, that its end may avoid all contact with the hull; and as moreover, if kept constantly towing there, it would be liable to many mishaps, besides interfering not a little with some of the rigging, and more or less impeding the vessel’s way in the water; because of all this, the lower parts of a ship’s lightning-rods are not always overboard; but are generally made in long slender links, so as to be the more readily hauled up into the chains outside, or thrown down into the sea, as occasion may require. The little steamer was already flapping her way eastward of the big crescent of shipping, and the low Essex coast was growing blue and hazy, when a Martian appeared, small and faint in the remote distance, advancing along the muddy coast from the direction of Foulness. At that the captain on the bridge swore at the top of his voice with fear and anger at his own delay, and the paddles seemed infected with his terror. Every soul aboard stood at the bulwarks or on the seats of the steamer and stared at that distant shape, higher than the trees or church towers inland, and advancing with a leisurely parody of a human stride. There was no exit from the room other than the doorway in which I now stood facing the two frightful reptiles. Cornered, I knew that they would fight like demons, and they were well equipped to fight if fight they must. Together they launched themselves upon me, and though I ran one of them through the heart on the instant, the other fastened its gleaming fangs about my sword arm above the elbow, and then with her sharp talons commenced to rake me about the body, evidently intent upon disemboweling me. I saw that it was useless to hope that I might release my arm from that powerful, viselike grip which seemed to be severing my arm from my body. The pain I suffered was intense, but it only served to spur me to greater efforts to overcome my antagonist. They were now almost upon him; their flying mounts charging down on the relatively puny figure at terrific speed, while the warriors leaned low to the right, with their great metal-shod spears. Each seemed striving to be the first to impale the poor Zodangan and in another moment his fate would have been sealed had it not been for my timely arrival. Driving my fleet air craft at high speed directly behind the warriors I soon overtook them and without diminishing my speed I rammed the prow of my little flier between the shoulders of the nearest. The impact sufficient to have torn through inches of solid steel, hurled the fellow’s headless body into the air over the head of his thoat, where it fell sprawling upon the moss. The mounts of the other two warriors turned squealing in terror, and bolted in opposite directions. With the exception of their ornaments all were naked. The women varied in appearance but little from the men, except that their tusks were much larger in proportion to their height, in some instances curving nearly to their high-set ears. Their bodies were smaller and lighter in color, and their fingers and toes bore the rudiments of nails, which were entirely lacking among the males. The adult females ranged in height from ten to twelve feet. Look at the sailor, called the mincer, who now comes along, and assisted by two allies, heavily backs the grandissimus, as the mariners call it, and with bowed shoulders, staggers off with it as if he were a grenadier carrying a dead comrade from the field. Extending it upon the forecastle deck, he now proceeds cylindrically to remove its dark pelt, as an African hunter the pelt of a boa. This done he turns the pelt inside out, like a pantaloon leg; gives it a good stretching, so as almost to double its diameter; and at last hangs it, well spread, in the rigging, to dry. Ere long, it is taken down; when removing some three feet of it, towards the pointed extremity, and then cutting two slits for arm-holes at the other end, he lengthwise slips himself bodily into it. The mincer now stands before you invested in the full canonicals of his calling. Immemorial to all his order, this investiture alone will adequately protect him, while employed in the peculiar functions of his office. But the placing of the cap-sheaf to all this blundering business was reserved for the scientific Frederick Cuvier, brother to the famous Baron. In 1836, he published a Natural History of Whales, in which he gives what he calls a picture of the Sperm Whale. Before showing that picture to any Nantucketer, you had best provide for your summary retreat from Nantucket. In a word, Frederick Cuvier’s Sperm Whale is not a Sperm Whale, but a squash. Of course, he never had the benefit of a whaling voyage (such men seldom have), but whence he derived that picture, who can tell? Perhaps he got it as his scientific predecessor in the same field, Desmarest, got one of his authentic abortions; that is, from a Chinese drawing. And what sort of lively lads with the pencil those Chinese are, many queer cups and saucers inform us.";
+
+  //- this array will be textFrom (by sentences);
+  - var textSplit = [];
+
   //- what we use to split the string on;
   - var sentenceSplit = ". ";
-  //- the array to collect our random selection of content from loremText;
-  - var lipsumArray = new Array();
+  //- the array to collect our random selection of content from textFrom;
+  - var arrayRandom = [];
   //- a string of our randomly selected content;
-  - var lipsumText = "";
+  - var textRandom = "";
   //- our content to output;
-  - var loremIpsum = "";
+  - var textOutput = "";
 
   - if (typeof amount === "undefined") {
-    - amount = 1;
+    - amount = 5;
+  - }
+  - if (typeof type === "undefined") {
+    - type = "text";
   - }
 
   //- randomize the content;
   //- turn that giant string into an array (of sentences) so we can work with it;
-  - loremArray = loremText.split(sentenceSplit);
+  - textSplit = textFrom.split(sentenceSplit);
   //- build a new random collection to work with;
-  - loremArray.forEach(function() {
+  - textSplit.forEach(function() {
     //- grab a random sentence (might grab the same random sentences - it is random);
-    - var randomSentence = loremArray[Math.floor(Math.random() * loremArray.length)];
+    - var randomSentence = textSplit[Math.floor(Math.random() * textSplit.length)];
     //- insert it into the working array;
-    - lipsumArray.push(randomSentence + sentenceSplit);
-    //- insert it inot the working string;
-    - lipsumText += randomSentence + sentenceSplit;
+    - arrayRandom.push(randomSentence + sentenceSplit);
+    //- insert it into the working string;
+    - textRandom += randomSentence + sentenceSplit;
   - });
 
   //- output the content based on the options passed into the mixin;
-  //- output characters;
   - if (type === "chars") {
     //- we already created a random string of lorem ipsum, now we just need to grab X characters of it;
-    - loremIpsum = lipsumText.substr(0, amount);
-  //- output words
-  - } else if (type === "words" || type === "text") {
-    //- we have a random string of words, but we dont want punctuation;
-    //- lipsumText = lipsumText.toLowerCase();
-    - lipsumText = lipsumText.split(".").join("");
-    - lipsumText = lipsumText.split(",").join("");
-    - lipsumArray = lipsumText.split(" ");
-    //- now we have an array of words without punctuation, we can grab X number of words;
-    - for (var i = 0; i < amount; i++) {
-      - loremIpsum += lipsumArray[i] + " ";
-    - }
-    - if (type === "text") {
-      - loremIpsum = loremIpsum.trim() + ".";
-    - }
-    //- capitalize the first letter of the first word;
-    //- loremIpsum = loremIpsum.charAt(0).toUpperCase() + loremIpsum.slice(1);
-  //- output sentences;
-  - } else if (type === "sentences" || typeof type === "undefined") {
+    - textOutput = textRandom.substr(0, amount);
+
+  - } else if (type === "sentences") {
+
     //- we already created an array of random content, now we just need to grab X items from it;
     - for (var i = 0; i < amount; i++) {
-      - loremIpsum += lipsumArray[i];
+      - textOutput += arrayRandom[i];
+    - }
+    - textOutput = textOutput.trim();
+
+  - } else {
+
+    //- we have a random string of words, but we dont want punctuation;
+    - var charsToRemove = [".", ",", ";"];
+    - for (i = 0; i < charsToRemove.length; i++) {
+      - textRandom = textRandom.split(charsToRemove[i]).join("");
+    - }
+    - arrayRandom = textRandom.split(" ");
+
+    //- now we have an array of words without punctuation, we can grab X number of words;
+    - for (var i = 0; i < amount; i++) {
+      - textOutput += arrayRandom[i] + " ";
+    - }
+    - if (type === "text") {
+      - textOutput = textOutput.trim() + ".";
     - }
   - }
 
   //- output what the dev asked for;
-  = loremIpsum
+  != textOutput
