--- a/assets/jade/partials/_typography.jade
+++ b/assets/jade/partials/_typography.jade
@@ -1,9 +1,9 @@
 section(data-name="typography")
-  each instance in ["h1", "h2", "h3", "h4"]
-    #{instance}(class="t-#{instance}"): +dummy(5, "words")
-    if (instance === "h1")
-      p.t-lead: +dummy(1)
-    else if (instance === "h4")
-      p.t-small: +dummy(3)
+  each instance in headlines
+    #{instance.tag}(class="t-head--#{instance.class}"): +dummy(5, "words")
+    if (instance.tag === "h1")
+      p.t-lead: +dummy(10)
+    else if (instance.tag === "h5" || instance.tag === "h6")
+      p.t-small: +dummy(30)
     else
-      p: +dummy(2)
+      p: +dummy(20)
