SCSS Base styles polish

--- a/assets/scss/base/b-default.scss
+++ b/assets/scss/base/b-default.scss
@@ -2,21 +2,26 @@ body {
   overflow-x: hidden;
   overflow-y: scroll;
 }
+
 hr {
   border-top: $line--s solid;
   border-bottom: none;
+
   @include margin(em($ratio--b) null);
-  @include rgba(border-color, $grey-4, .5);
+  @include rgba(border-color, $grey--200, .5);
 }
+
 img {
   display: block;
   max-width: 100%;
 }
+
 canvas,
 iframe {
   display: block;
   width: 100%;
 }
+
 table {
   width: 100%;
 }
