--- a/assets/scss/config/c-colors.scss
+++ b/assets/scss/config/c-colors.scss
@@ -1,44 +1,35 @@
-$hue-1: 90;
-$hue-2: 160;
-$hue-3: 50;
+$hue-1: 170;
+$hue-2: $hue-1 - 120;
 
-// Primary colors.
-$color-1--light:   hsb($hue-1, 060, 095);
-$color-1:          hsb($hue-1, 070, 075);
-$color-1--dark:    hsb($hue-1, 060, 065);
+$neutral-1: 210;
 
-$color-2--lighter: hsb($hue-2, 050, 100);
-$color-2--light:   hsb($hue-2, 065, 095);
-$color-2:          hsb($hue-2, 070, 080);
-$color-2--dark:    hsb($hue-2, 070, 070);
-$color-2--darker:  hsb($hue-2, 075, 060);
+// Primary colors
+$color1--300: hsb($hue-1, 016, 095);
+$color1--500: hsb($hue-1, 085, 080);
+$color1--700: hsb($hue-1, 050, 065);
 
-$color-3--light:   hsb($hue-3, 055, 095);
-$color-3:          hsb($hue-3, 065, 090);
-$color-3--dark:    hsb($hue-3, 070, 080);
+$color2--300: hsb($hue-2, 020, 100);
+$color2--500: hsb($hue-2, 075, 095);
+$color2--700: hsb($hue-2, 030, 060);
 
-// Neutral colors.
-$grey-1: hsb(210, 02, 96);
-$grey-2: hsb(210, 03, 85);
-$grey-3: hsb(210, 04, 74);
-$grey-4: hsb(210, 05, 63);
-$grey-5: hsb(210, 06, 52);
-$grey-6: hsb(210, 07, 41);
-$grey-7: hsb(210, 08, 30);
-$grey-8: hsb(210, 09, 19);
-$grey-9: hsb(210, 09, 08);
+// Increments of 9, only B52 missing
+$grey--000: hsb($neutral-1, 02, 97);
+$grey--100: hsb($neutral-1, 04, 88);
+$grey--200: hsb($neutral-1, 06, 79);
+$grey--300: hsb($neutral-1, 08, 70);
+$grey--400: hsb($neutral-1, 10, 61);
+$grey--500: hsb($neutral-1, 12, 43);
+$grey--600: hsb($neutral-1, 14, 34);
+$grey--700: hsb($neutral-1, 16, 25);
+$grey--800: hsb($neutral-1, 18, 16);
+$grey--900: hsb($neutral-1, 20, 07);
 
-// // Interactive.
-$c-link: $color-1;
-$c-link--light: $color-1--light;
-$c-link--dark: $color-1--dark;
+// Interactive
+$c-link:         $color1--500;
+$c-visited:      $color1--500;
 
-$c-visited: $color-2;
-$c-hover: $color-2;
+$c-hover:        $color1--700;
+$c-active:       $color1--700;
 
-$c-active: $color-3;
-$c-active--light: $color-3--light;
-$c-active--dark: $color-3--dark;
-
-$c-select__background: $color-2--light;
-$c-select__text: $color-2--dark;
+$c-select__bg:   $color2--300;
+$c-select__text: $color2--700;
