--- a/assets/scss/objects/o-button.scss
+++ b/assets/scss/objects/o-button.scss
@@ -1,15 +1,15 @@
-// A basic button.
+// Button
 //
 // .o-button--solid - Solid background.
 // .o-button--outline - Outline variant.
-// .o-button--block - Full-width.
+// .o-button--block.o-button--outline - Full-width, e.g. outline.
 // .o-button--selected - Selected.
 //
 // Markup:
-// <a href="#" class="o-button {$modifiers}">Button</a>
-// <a href="#" class="o-button {$modifiers} pseudo-class-hover">On Hover</a>
+// <a href="#" class="{$modifiers}">Button</a>
 //
-// Styleguide 3.1.
+// Styleguide 4.1.
+
 [class^="o-button--"],
 [class*=" o-button--"] {
   display: inline-block;
@@ -39,7 +39,7 @@
   border: $line--b solid;
   line-height: em($height--b - $line--b * 2);
   @include state--link {
-    color: $color-1;
+    color: $c-link;
   }
   @include state--active {
     color: $c-hover;
@@ -52,12 +52,16 @@
   padding-left: 0;
   padding-right: 0;
   text-align: center;
+
+  & + & {
+    margin-top: em($ratio--s);
+  }
 }
 
 // Selected.
 .o-button--selected {
   @include state--all {
-    background-color: $grey-1;
-    color: $grey-4;
+    background-color: $grey--100;
+    color: $grey--300;
   }
 }
