--- a/assets/scss/objects/o-button-group.scss
+++ b/assets/scss/objects/o-button-group.scss
@@ -1,31 +1,35 @@
-// Button group.
+// Button group
 //
 // .o-button-group--inline - Inline buttons.
 // .o-button-group--stacked - Stacked buttons.
 //
 // Markup:
 // <div class="{$modifiers}">
-// <a href="#" class="o-button--solid">Button</a>
-// <a href="#" class="o-button--solid">Button</a>
+//   <a href="#" class="o-button--solid">Button</a>
+//   <a href="#" class="o-button--outline">Button</a>
 // </div>
 //
-// Styleguide 3.2.
+// Styleguide 4.2.
+
 .o-button-group--inline {
   [class^="o-button--"],
   [class*=" o-button--"] {
-      margin-left: em($ratio--s);
+      margin-left: em($ratio--xs);
+
       &:first-child {
         margin-left: 0;
       }
   }
 }
-// Stacked below each other.
+
 .o-button-group--stacked {
   text-align: center;
+
   [class^="o-button--"],
   [class*=" o-button--"] {
     display: block;
     margin-top: em($ratio--s);
+    
     &:first-child {
       margin-top: 0;
     }
