--- a/assets/scss/objects/o-form.scss
+++ b/assets/scss/objects/o-form.scss
@@ -1,8 +1,29 @@
+// Form
+//
+// Markup:
+// <form class="o-form">
+//   <fieldset class="o-form__fieldset">
+//     <legend class="o-form__legend">Fill this out, please</legend>
+//     <table class="o-form__table">
+//       <tr>
+//         <td>Form cell</td>
+//         <td>Form cell</td>
+//       </tr>
+//       <tr>
+//         <td>Form cell</td>
+//         <td>Form cell</td>
+//       </tr>
+//     </table>
+//   </fieldset>
+// </form>
+//
+// Styleguide 4.36.
+
 .o-form__fieldset {
   padding: em($ratio--b);
   margin: 0;
 
-  border: $line--s solid $grey-2;
+  border: $line--s solid $grey--100;
   border-radius: $radius--b;
 }
 
