--- a/assets/scss/objects/o-hero.scss
+++ b/assets/scss/objects/o-hero.scss
@@ -1,13 +1,27 @@
+// Hero
+//
+// .o-hero--basic - Image with an overlay text, height according to image.
+// .o-hero--full - Stretch to viewport height, fill with image.
+// .o-hero--center - Center the overlay.
+//
+// Markup:
+// <div class="{$modifiers}">
+//   <div class="o-hero__overlay">
+//     <div class="o-hero__content"><p>Hero overlay text.</p></div>
+//   </div>
+//   <img class="o-hero__image" src="http://unsplash.it/1280/800/?image=1" alt="Hero background">
+// </div>
+//
+// Styleguide 4.53.
+
 [class^="o-hero--"],
 [class*=" o-hero--"] {
   position: relative;
-}
-.o-hero--full {
-  height: 100vh;
+
+  background-color: $grey--800;
 }
 
-[class^="o-hero__overlay"],
-[class*=" o-hero__overlay"] {
+.o-hero__overlay {
   @include stretch-overlay;
   color: white;
   z-index: $index--b;
@@ -18,23 +32,43 @@
   @include collapse-children;
 }
 
-.o-hero__background {
-  background-color: $grey-8;
-}
-
 .o-hero__image {
   opacity: .625;
   @include margin(null auto);
 }
 
+// Full-height variant.
+.o-hero--full {
+  height: 100vh;
+
+  overflow: hidden;
+
+  .o-hero__image {
+    @include position(absolute, 50% null null 50%);
+    transform: translate(-50%, -50%);
+
+    width: auto;
+    height: auto;
+
+    max-width: none;
+    max-height: none;
+
+    min-width: 100%;
+    min-height: 100%;
+  }
+}
+
 // Centered variant.
-.o-hero__overlay--center {
-  @include pseudo-center--parent;
+.o-hero--center {
 
-  margin-left: em(-$ratio--b); // Offseting white-space from pseudo-centering
+  .o-hero__overlay {
+    @include pseudo-center--parent;
 
-  text-align: center;
-  white-space: nowrap;
+    margin-left: em(-$ratio--b); // Offseting white-space from pseudo-centering
+
+    text-align: center;
+    white-space: nowrap;
+  }
   
   .o-hero__content {
     @include pseudo-center--child;
