--- a/assets/scss/objects/o-tabs.scss
+++ b/assets/scss/objects/o-tabs.scss
@@ -1,10 +1,32 @@
+// Tabs
+//
+// Markup:
+// <ul class="o-tabs" data-tabs>
+//   <li class="o-tabs__item">
+//     <a href="#" class="o-tabs__link">Tab title</a>
+//     <div class="o-tabs__content"><p>Tab content</p></div>
+//   </li>
+//   <li class="o-tabs__item">
+//     <a href="#" class="o-tabs__link">Tab title</a>
+//     <div class="o-tabs__content"><p>Another content</p></div>
+//   </li>
+//   <li class="o-tabs__item">
+//     <a href="#" class="o-tabs__link">Tab title</a>
+//     <div class="o-tabs__content"><p>Last piece of content</p></div>
+//   </li>
+// </ul>
+//
+// Styleguide 4.51.
+
 .o-tabs {
   padding-left: 0;
   @include clearfix;
 }
+
 .o-tabs__item {
   display: inline;
 }
+
 .o-tabs__link {
   display: inline-block;
   
@@ -14,20 +36,22 @@
 
   text-decoration: none;
 }
+
 .o-tabs__content {
   display: none;
   width: 100%;
-  border-top: $line--s solid $grey-2;
+  border-top: $line--s solid $grey--100;
 }
 
 // Tab states.
 .tab--is-active {
-  background-color: $c-active--light;
+  // background-color: $c-active;
   @include state--all {
-    color: $c-active--dark;
+    // color: $c-active--dark;
     border-bottom: $line--s solid $c-active;
   }
 }
+
 .tab--is-open {
   display: block;
   float: left;
