SG Added more specific styles

--- a/assets/scss/styleguide/specific.scss
+++ b/assets/scss/styleguide/specific.scss
@@ -1,6 +1,25 @@
 // Specific KSS styles.
-.kss-block {
-  .l-wrap {
-    background-color: $c-select__background;
+.kss-item {
+  .l-wrap,
+  [class^="l-spacer"],
+  [class*=" l-spacer"] {
+    background-color: $grey--000;
+  }
+
+  [class^="l-grid__item--"],
+  [class*=" l-grid__item--"] {
+    margin-bottom: em($ratio--s);
+
+    background-color: $grey--000;
+  }
+
+  [class^="t-link--"],
+  [class*=" t-link--"] {
+    display: inline-block;
+  }
+
+  [class^="l-section--"],
+  [class*=" l-section--"] {
+    padding: em($ratio--m);
   }
 }
