SCSS Renamed t-emphasis to t-caps

--- a/assets/scss/typography/t-caps.scss
+++ b/assets/scss/typography/t-caps.scss
@@ -1,3 +1,13 @@
+// Caps
+//
+// .t-caps - Uppercase.
+// .t-caps--small - Small-caps.
+//
+// Markup:
+// <strong class="{$modifiers}">Emphasis text</strong>
+//
+// Styleguide 3.2.
+
 [class^="t-caps"],
 [class*=" t-caps"] {
   letter-spacing: em($ratio--t);
