--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,7 +1,7 @@
 // Bourbon
 @import "bourbon";
 
-// Mixins
+// Framework mixins
 @import "mixins/_mixins";
 @import "mixins/_center";
 @import "mixins/_color";
@@ -9,7 +9,7 @@
 @import "mixins/_state";
 @import "mixins/_wrap";
 
-// Config
+// Site config
 @import "config/c-colors";
 @import "config/c-units";
 @import "config/c-fonts";
@@ -23,48 +23,54 @@
 @import "vendor/neat";
 @import "vendor/featherlight";
 @import "vendor/symbolset";
+@import "vendor/symbolset-custom";
 
-// Base
+// Site base
 @import "base/b-default";
 @import "base/b-interactive";
 @import "base/b-typography";
 
 // Layout
 // 
-// Styleguide 1.
-@import "layout/l-grid";
-@import "layout/l-inline";
-@import "layout/l-spacer";
+// Styleguide 2.
 @import "layout/l-wrap";
+@import "layout/l-inline";
+@import "layout/l-grid";
+@import "layout/l-spacer";
+@import "layout/l-section";
 
 // Typography
 //
-// Styleguide 2.
-@import "typography/t-emphasis";
-@import "typography/t-headline";
-@import "typography/t-paragraph";
+// Styleguide 3.
+@import "typography/t-head";
+@import "typography/t-caps";
+@import "typography/t-text";
+@import "typography/t-link";
 
 // Objects
 //
-// Styleguide 3.
-@import "objects/o-accordion";
+// Styleguide 4.
 @import "objects/o-button";
 @import "objects/o-button-group";
-@import "objects/o-carousel";
 @import "objects/o-dotlist";
-@import "objects/o-field";
-@import "objects/o-form";
-@import "objects/o-hero";
-@import "objects/o-icon";
-@import "objects/o-icon-button";
-@import "objects/o-input";
-@import "objects/o-modal";
 @import "objects/o-nav";
 @import "objects/o-note";
-@import "objects/o-radio";
-@import "objects/o-select";
-@import "objects/o-slider";
-@import "objects/o-submit";
-@import "objects/o-tabs";
-@import "objects/o-textarea";
 @import "objects/o-tooltip";
+
+@import "objects/o-icon";
+@import "objects/o-icon-button";
+
+@import "objects/o-input";
+@import "objects/o-textarea";
+@import "objects/o-select";
+@import "objects/o-radio";
+@import "objects/o-submit";
+@import "objects/o-field";
+@import "objects/o-form";
+
+@import "objects/o-accordion";
+@import "objects/o-tabs";
+@import "objects/o-modal";
+@import "objects/o-hero";
+@import "objects/o-slider";
+@import "objects/o-carousel";
